temporary-ingress.yaml
# Remember to :
# - remove custom host rule for Full (not strict) TLS from @ CF
# - remove WAF that allows only k8s dev cluster egress
# - update IP back to bilbong
#
# - remove CI/CD env var that adds docker auths
# - remove SA key generated for this purpose
#
# - restore operations-developer-whitelist middleware on argo's ingress

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: eth-rpc
  namespace: octant-testnet
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
  - match: Host(`geth.wildland.dev`)
    kind: Rule
    middlewares:
      - name: cors-wildcard@file
    services:
    - name: eth-rpc-haproxy
      port: 80
